--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolioTemplate",
+  "name": "shivliPortfolio",
   "version": "2.0.0",
   "private": true,
   "homepage": "http://shivliagrawal.github.io/shivliagrawal.github.io",
