--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shivliPortfolio",
   "version": "2.0.0",
-  "private": true,
+  "private": false,
   "homepage": "http://shivliagrawal.github.io/shivliagrawal.github.io",
   "dependencies": {
     "@emotion/react": "^11.9.0",
